fix spacing for Upload button (bug 698810)

--- a/media/css/zamboni/developers.css
+++ b/media/css/zamboni/developers.css
@@ -830,8 +830,7 @@ a.extra {
 #upload-file .upload-details {
     font-size: 11px;
     color: #999;
-    margin-bottom: 10px;
-    margin-top: -7px;
+    margin: 0 0 10px;
 }
 
 #upload-file .upload-status div:first-child {
